# simple-web-archiver

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: config.py  main.py  pyproject.toml
